<resources>
    <string name="app_name">News</string>
    <string name="action_settings">Settings</string>
    <string name="tab_function">首页</string>
    <string name="tab_news_center">新闻中心</string>
    <string name="tab_smart_service">智慧服务</string>
    <string name="tab_gov_affairs">政务指南</string>
    <string name="tab_setting">设置</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
